# poker-server-rs

./: Cargo.toml  flake.nix
src/: main.rs
src/engine/: card.rs  mod.rs  player.rs  table.rs
src/routes/: create_table.rs  edit_table.rs  exit_table.rs  find_player.rs  get_table.rs  join_table.rs  mod.rs  perform_action.rs  search_tables.rs  start_game.rs
