[package]
name = "poker-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing-subscriber = "0.3.19"
